# cnfgen-nand-opt

./: Cargo.toml  README.md
examples/: nand_problem_1.txt  nand_problem_2.txt
src/: main.rs
