[package]
name = "cnfgen-nand-opt"
authors = ["Mateusz Szpakowski"]
license = "LGPL-2.1-or-later"
version = "0.1.0"
edition = "2021"
description = "Generate CNF for circuits"
repository = "https://github.com/matszpk/cnfgen-nand-opt"
keywords = ["cnf", "logic", "cnfgen", "SAT"]
categories = ["science", "mathematics"]

[dependencies]
toml = "0.5"
serde = "1.0.0"
serde_derive = "1.0.0"
thiserror = "1.0"
cnfgen = "0.2.1"
exec-sat = "0.1.1"
